--- a/analyzeApplyExtend-2/apply/css/apply07.css
+++ b/analyzeApplyExtend-2/apply/css/apply07.css
@@ -1,11 +1,11 @@
 /*
-Author:
-Date:
-File Name: 
+Author: Shane Mack
+Date: 4/21/24
+File Name: apply07.css
 */
 
 /* CSS Reset */
-body, header, nav, main, footer, h1, div {
+body, header, nav, main, footer, h1, div, section, article, aside {
     margin: 0;
     padding: 0;
     border: 0;
@@ -49,6 +49,29 @@ main {
 	background-color: #fff;
 }
 
+/* Style rules for section element in mobile viewport */
+section {
+    background-color: #183440;
+    color: #fff;
+    margin-top: 4%;
+    padding: 3%;
+}
+
+/* Style rules for article element in mobile viewport */
+article {
+    margin-top: 1%;
+    padding: 2%;
+}
+
+/* Style rules for aside element in mobile viewport */
+aside {
+    background-color: rgba(24, 52, 64, 0.3);
+    padding: 2%;
+    margin-top: 1%;
+    color: #183440;
+    box-shadow: 4px 4px 10px #183440;
+}
+
 footer {
 	font-size: .70em;
 	text-align: center;
@@ -56,12 +79,28 @@ footer {
 
 /* Media Query for Tablet Viewport */
 @media screen and (min-width: 650px), print {
-    
-    
+    /* Style rules for .grid class selector in tablet viewport */
+    .grid {
+        display: grid;
+        grid-template-columns: auto auto;
+        grid-gap: 20px;
+    }
+
+    /* Style rules for aside element in tablet viewport */
+    aside {
+        grid-column: span 2;
+    }
 }
 
 /* Media Query for Desktop Viewport */
 @media screen and (min-width: 1024px), print {
+    /* Style rules for .grid class selector in desktop viewport */
+    .grid {
+        grid-template-columns: auto auto auto auto;
+    }
 
-    
+    /* Style rules for aside element in desktop viewport */
+    aside {
+        grid-column: span 4;
+    }
 }
