--- a/analyzeApplyExtend-2/analyze/css/styles07.css
+++ b/analyzeApplyExtend-2/analyze/css/styles07.css
@@ -1,11 +1,11 @@
 /*
-Author:
-Date:
-File Name: 
+Author: Shane Mack
+Date: 4/21/2024
+File Name: styles07.css
 */
 
 /* CSS Reset */
-body, header, nav, main, footer, h1, h3, div {
+body, header, nav, main, footer, h1, h3, div, section, article, aside, footer {
     margin: 0;
     padding: 0;
     border: 0;
@@ -15,8 +15,6 @@ body, header, nav, main, footer, h1, h3, div {
 body {
 	background-color: #ffebdc;
 }
-
-/* Style rules for mobile viewport */
 
 /* Style rule for header */
 header {
@@ -57,6 +55,8 @@ main h1 {
 section {
     color: #fff;
     padding: 3%;
+    background-color: #9d4502;
+    margin: 1% 0;
 }
 
 article {
@@ -73,6 +73,8 @@ aside {
     font-style: italic;
     text-align: center;
     border-radius: 15px;
+    text-shadow: 4px 4px 8px #fc7307;
+    box-shadow: 4px 4px 10px #183440;
 }
 
 footer {
@@ -82,6 +84,13 @@ footer {
 
 /* Media Query for Tablet Viewport */
 @media screen and (min-width: 700px), print {
+    .grid {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 20px;
+    }
     
-    
+    aside {
+        grid-column: span 3;
+    }
 }
